--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
         Ваших друзей
     </string>
     <string name="login_enter">Войти</string>
+    <string name="friends_search_here">Enter your query here</string>
+    <string name="no_friends_item">У Вас нет друзей!</string>
+    <string name="login_error_credentials">Ошибка при логине в ВК</string>
+    <string name="friend_no_city">Город не указан</string>
 </resources>
